# docx2python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  Pipfile  README.md  README_DOCX_FILE_STRUCTURE.md  README_v2_ROADMAP.md  __init__.py  changelog  changelog.md  dev-requirements.txt  pears_and_apples.docx  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  pypi-project.yml
docs/: README_DOCX_FILE_STRUCTURE.md  conf.py  docx_context.rst  iterators.rst  namespace.rst  numbering_formats.rst  text_runs.rst
docs/html/: .buildinfo  depth_collector.html  depth_output.html  docx2python.html  docx_context.html  docx_text.html  genindex.html  index.html  iterators.html  modules.html  namespace.html  numbering_formats.html  objects.inv  py-modindex.html  search.html  searchindex.js  text_runs.html
docs/source/: conf.py  index.rst  modules.rst
docx2python/: __init__.py  attribute_dicts.py  attribute_register.py  bullets_and_numbering.py  decode_docx.py  depth_collector.py  docx_context.py  docx_organization.py  docx_output.py  docx_reader.py  docx_text.py  forms.py  globs.py  iterators.py  main.py  merge_runs.py  namespace.py  numbering_formats.py  test_comment.py  text_runs.py  utilities.py
docx_reader/: __init__.py
docx_reader/docx_reader/: xml_run_styles.py
scripts/: README  break_long_xml_lines.py  temp_nos.py
source/: conf.py  docx2python.rst  index.rst
test/: BIG_FILE_test_more_html.py  conftest.py  do_not_test_problem_files.py  resources_fails  resources_works  test_ascii_printable.py  test_check_drop.py  test_checked_boxes.py  test_created_in_pages.py  test_document2_xml.py  test_docx2python.py  test_docx_context.py  test_docx_output.py  test_equations.py  test_file_object.py  test_from_bytes.py  test_get_text.py  test_google_docs.py  test_hyperlinks.py  test_import.py  test_iterators.py  test_libreoffice_conversion.py  test_merge_links.py  test_merge_runs.py  test_missing_imagedata_rid.py  test_more_html.py  test_namespace.py  test_numbering_formats.py  test_par_styles.py  test_pict.py  test_run_styles.py  test_slanted_quotes.py  test_soft_line_breaks.py  test_symbols.py  test_tables_object.py  test_text_runs.py  test_toc_support.py  test_utilities.py
test/helpers/: utils.py
test/resources/: ascii_printable.docx  basic.docx  check_drop_my.docx  checked_boxes.docx  checked_drop1.docx  created-in-pages-bulleted-lists.docx  equations.docx  example.docx  example_copy.docx  example_edit.docx  libreoffice_conversion.docx  merged_links.docx  multiple_runs_per_paragraph.docx  nested_paragraphs.docx  pears_and_apples.docx  run_styles.docx  soft_line_breaks.docx  test-docx2python-conversion-google_docs.docx  unchecked_drop0.docx  zen_of_python.docx  ~$cii_printable.docx  ~$eck_drop_my.docx  ~$n_of_python.docx  ~$uations.docx  ~$xample.docx
tests/: conftest.py  do_not_test_missing_imagedata_rid.py  do_not_test_problem_files.py  test_ascii_printable.py  test_check_drop.py  test_checked_boxes.py  test_close.py  test_comments.py  test_content_control_block_properties.py  test_created_in_pages.py  test_document2_xml.py  test_docx2python.py  test_docx_context.py  test_docx_output.py  test_dropdown_selector_in_table.py  test_equations.py  test_file_object.py  test_from_bytes.py  test_get_text.py  test_google_docs.py  test_hyperlinks.py  test_import.py  test_invalid_tag_name.py  test_iterators.py  test_libreoffice_conversion.py  test_lineage.py  test_linebreak_replace_text.py  test_list_position.py  test_long_hyperlink.py  test_merge_runs.py  test_merged_cells.py  test_more_html.py  test_namespace.py  test_numbering_formats.py  test_par_styles.py  test_pict.py  test_run_styles.py  test_slanted_quotes.py  test_soft_line_breaks.py  test_strict.py  (+6 more)
tests/helpers/: utils.py
tests/resources/: 240-DOP-1013A Lay Down Tubulars.docx  ControlTest.docx  apples_and_pears.docx  checked-true-false.docx  comments.docx  created-in-pages-paragraphs-only.docx  example_copy.docx  example_edit.docx  example_numbering.docx  has_pict.docx  strict.docx  (+16 more)
(+17 files in other folders)
